[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex              = { version = "1.8.1" }
swc = {version = "0.261.24",features=["plugin","plugin_transform_host_native"]}
swc_common = {version="0.31.11"}
once_cell = "1.17.1"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.96"
swc_ecma_transforms="0.208.1"
swc_ecma_visit={version="0.90.4",features=["path"]}
swc_plugin_runner = {features=["default","plugin_transform_schema_v1"]}