[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex              = { version = "1.8.1" }
once_cell = "1.17.1"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.96"
swc_core = { version = "0.76.29",features=["base","ecma_ast","common","swc_plugin_runner","plugin_transform_host_native_filesystem_cache","plugin_transform_host_native"] }
